--- a/app/sass/_framework.sass
+++ b/app/sass/_framework.sass
@@ -1,6 +1,9 @@
 .pt50
 	padding-top: 50px
 
+.pt152
+	padding-top: 152px
+
 .mb5
 	margin-bottom: 5px
 
@@ -19,6 +22,9 @@
 .mb17
 	margin-bottom: 17px
 
+.mb18
+	margin-bottom: 18px
+
 .mb20
 	margin-bottom: 20px
 
@@ -31,11 +37,17 @@
 .mb25
 	margin-bottom: 25px
 
+.mb28
+	margin-bottom: 28px
+
 .mb30
 	margin-bottom: 30px
 
 .mb35
 	margin-bottom: 35px
+
+.mb47
+	margin-bottom: 47px
 
 .mb50
 	margin-bottom: 50px
@@ -45,6 +57,9 @@
 
 .mr105
 	margin-right: 105px
+
+.fz30
+	font-size: 30px
 
 .fz36
 	font-size: 36px
