--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="block">
-        <div class="general pt50">
+        <div class="general pt152">
             <div class="general__circle-blue"></div>
             <div class="container">
                 <div class="general__circle-big-border-gray"></div>
@@ -32,22 +32,22 @@
         <div class="container container_955 mb50">
             <div class="tasks__grid tasks-grid">
                 <div class="tasks-grid__item tasks-grid__item_w410 tasks-grid-item">
-                    <div class="mb25">
+                    <div class="mb20">
                         <span class="tasks-grid-item__title">Задача</span>
                     </div>
                     <p class="tasks-grid-item__paragraph mb23">
                         Создать приложение для Ростелекома с функционалом просмотра ТВ-программы и бесплатных передач от ВсёТВ.
                     </p>
-                    <p class="tasks-grid-item__paragraph mb50">
+                    <p class="tasks-grid-item__paragraph mb47">
                         Реализовать необычную фильтрацию по большому банку фильмов Интерактивного ТВ Ростелеком.
                     </p>
-                    <div class="mb25"><span class="tasks-grid-item__title">Клиент</span></div>
+                    <div class="mb18"><span class="tasks-grid-item__title">Клиент</span></div>
                     <p class="tasks-grid-item__paragraph mb35">
                         Компания iBecom — разработчик продуктов и решений в области микролокаций и indoor-навигации. <a href="www.espley.ru" target="_blank">www.espley.ru</a>
                     </p>
                 </div>
                 <div class="tasks-grid__item tasks-grid__item_w400 tasks-grid-item">
-                    <div class="mb25">
+                    <div class="mb20">
                         <span class="tasks-grid-item__title">Проблематика</span>
                     </div>
                     <p class="tasks-grid-item__paragraph mb23">В приложении  пользователь должен искать фильмы, передачи не по привычным всем — режиссёру, актеру, году и прочим параметрам, а по настроению.
@@ -102,6 +102,7 @@
     </div>
 
     <div class="tv-guide">
+        <div class="tv-guide__circle-blue"></div>
         <div class="container">
             <div class="section-number">1</div>
             <div class="small-title fz36 mb17">Теле-гид</div>
@@ -142,6 +143,7 @@
     </div>
 
     <div class="my-collection">
+        <div class="my-collection__circle-blue"></div>
         <div class="container">
             <div class="my-collection-wrapper">
                 <div class="my-collection__profile"></div>
@@ -170,6 +172,56 @@
         </div>
     </div>
 
+    <div class="tags">
+        <div class="container">
+            <div class="section-number section-number_tags">3</div>
+            <div class="tags__title">
+                <span class="tags__title-text-orange">#Теги-</span>
+                <span class="tags__title-text-blue">настроения</span>
+            </div>
+            <div class="tags__small-title">создали особую систему тегирования</div>
+            <div class="tags-gadgets">
+                <div class="tags-gadget tags-gadget_1"></div>
+                <div class="tags-gadget tags-gadget_2"></div>
+            </div>
+            <div class="tags-descr">
+                <div class="tags-descr__title">3 этапа фильтрации</div>
+                <div class="tags-descr__text mb20">
+                    <p class="text-orange">Существует огромная база данных фильмов и передач с кратким описанием сюжета.</p>
+                    <p>База находится на стороне Ростелекома. Автоматически формируется список слов-вхождений — начальные формы всех слов, которые есть в описании.</p>
+                </div>
+                <div class="tags-descr__text mb28">
+                    <p class="text-orange">Создаются субъективные теги</p>
+                    <p>— любовь, отдых, война, дружба и прочее. Их список может пополняться администратором.
+К ним вручную присваиваются слова-вхождения.</p>
+                </div>
+                <div class="tags-descr__text">
+                    <p class="text-orange">Создание базы хэштегов </p>
+                    <p>которая постоянно пополняется администратором. Каждому хэштегу приписываются отвечающие по смыслу фильмы, передачи. Для этого хэштег описывается по определённой схеме.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="conclusion">
+        <div class="conclusion__circle-orange-top"></div>
+        <div class="container">
+            <div class="conclusion__circle-big"></div>
+            <div class="conclusion__circle-small"></div>
+            <div class="section-number section-number_conclusion">4</div>
+            <div class="conclusion__title">
+                Удобный и интересный навигатор для клиента Интерактивного телевидения Ростелеком и не только.
+            </div>
+            <div class="conlcusion__all">Все</div>
+            <div class="conclusion__tv">ТВ</div>
+            <div class="conclusion__circle-white"></div>
+            <div class="counclusion__gadget"></div>
+            <div class="conclusion__bottom-text">
+                ТВ-программа, кроме расписания, подсказывает номер канала, а видеопрокат — стоимость фильма. Киноман выберет картину на вечер по настроению и расшарит понравившийся сериал друзьям, а начинающий кулинар не пропустит передачу с всемирно известным поваром.
+            </div>
+            <div class="conclusion__rostelcom"></div>
+        </div>
+        <div class="conclusion__circle-blue-bottom"></div>
+    </div>
 
 {% endblock %}
