--- a/app/twig/layouts/header.twig
+++ b/app/twig/layouts/header.twig
@@ -1,15 +1,25 @@
-<header class="top-nav">
-    <div class="container container_1070">
-        <div class="flex">
-            <div class="top-nav__logo flex-item-left">
-                <a class="inline-block" href="/"><i class="fri fri-logo"></i></a>
-            </div>
-            <div class="top-nav__back flex flex-column flex-item-center">
-                <i class="top-nav__back-icon fri fri-arrow-dark flex-item-middle"></i>
-                <span class="top-nav__back-text flex-item-middle text-center">К списку проектов</span>
-            </div>
-            <div class="top-nav__contacts flex-item-right">
-                <a class="button button__nav" href="#">Получить консультацию</a>
+<header class="nav nav-top nav-white">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="nav__logo nav__single">
+                    <a href="/">
+                        <i class="fri fri-logo"></i>
+                    </a>
+                </div>
+                <div class="nav__back">
+                    <a href="/">
+                        <span>
+                            <i class="top-nav__back-icon fri fri-arrow-dark"></i>
+                        </span>
+                        Узнать о компании
+                    </a>
+                </div>
+                <div class="nav__menu">
+                    <div class="nav__menu__contacts">
+                        <a href="#feedback" class="btn sroll">Получить консультацию</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
