--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -1,30 +1,30 @@
-.top-nav
-	box-shadow: 0 3px 12px rgba(0,0,0,0.5)
-	height: 102px
-	padding: 27px 0 9px
-	z-index: 999
-	width: 100%
-	position: relative
-
-.top-nav__back
-	padding-right: 11px
-	margin-top: -3px
-	cursor: pointer
-	&:hover
-		.top-nav__back-text
-			color: #ff6000
-
-.top-nav__back-icon
-	margin-bottom: 22px
-
-.top-nav__back-text
-	font-size: 15px
-
-.button__nav
-	border: 2px solid #000
-	min-height: 40px
-	padding: 0 28px
-	&:hover
-		color: #fff
-		background-color: #ff6000
-		border-color: #ff6000
+//.top-nav
+//	box-shadow: 0 3px 12px rgba(0,0,0,0.5)
+//	height: 102px
+//	padding: 27px 0 9px
+//	z-index: 999
+//	width: 100%
+//	position: relative
+//
+//.top-nav__back
+//	padding-right: 11px
+//	margin-top: -3px
+//	cursor: pointer
+//	&:hover
+//		.top-nav__back-text
+//			color: #ff6000
+//
+//.top-nav__back-icon
+//	margin-bottom: 22px
+//
+//.top-nav__back-text
+//	font-size: 15px
+//
+//.button__nav
+//	border: 2px solid #000
+//	min-height: 40px
+//	padding: 0 28px
+//	&:hover
+//		color: #fff
+//		background-color: #ff6000
+//		border-color: #ff6000
