--- a/app/twig/layouts/app.twig
+++ b/app/twig/layouts/app.twig
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="site-wrapper">
+    <div class="vsetv-wrapper">
         <!-- Header block -->
         {% include "header.twig" %}
         <!-- Header block end -->
