--- a/app/twig/layouts/stylesheets.twig
+++ b/app/twig/layouts/stylesheets.twig
@@ -4,6 +4,9 @@
 <!--endbower-->
 <!--endbuild-->
 
+<link href="http://www.arealidea.ru/bitrix/cache/css/s1/secondPages/template_5a6eb9a509476a4111f5a9eaee8586a6/template_5a6eb9a509476a4111f5a9eaee8586a6.css?1496044031260467" type="text/css"  data-template-style="true"  rel="stylesheet" />
+
 <!--build:css css/common.css-->
 <link rel="stylesheet" href="css/app.css">
 <!--endbuild-->
+
